[gd_scene load_steps=8 format=3 uid="uid://b2y0ohhcprxun"]

[ext_resource type="Script" uid="uid://c838e2q5kwly0" path="res://ui/story/story_sequence.gd" id="1_n5gvg"]
[ext_resource type="Theme" uid="uid://ddklgnmfj25sv" path="res://ui/story/story_theme.tres" id="2_l35kj"]
[ext_resource type="AudioStream" uid="uid://dk20esx5o424h" path="res://narrative/sounds/chatty_signal_short_a.wav" id="3_4kt13"]
[ext_resource type="AudioStream" uid="uid://c7lpnx8vng1dt" path="res://narrative/sounds/chatty_signal_short_b.wav" id="4_yker4"]

[sub_resource type="Gradient" id="Gradient_nw3j5"]
colors = PackedColorArray(0.290196, 0.172549, 0.0509804, 1, 0.618841, 0.391831, 0.159393, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gkxf4"]
gradient = SubResource("Gradient_nw3j5")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cy58k"]
random_pitch = 1.05
streams_count = 2
stream_0/stream = ExtResource("3_4kt13")
stream_1/stream = ExtResource("4_yker4")

[node name="StorySequence" type="Control" node_paths=PackedStringArray("texts")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_l35kj")
script = ExtResource("1_n5gvg")
texts = [NodePath("Container/StorySlides/Slide/StoryText"), NodePath("Container/StorySlides/Slide2/StoryText")]

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_gkxf4")

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StorySlides" type="MarginContainer" parent="Container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 128

[node name="Slide" type="CenterContainer" parent="Container/StorySlides"]
layout_mode = 2

[node name="StoryText" type="RichTextLabel" parent="Container/StorySlides/Slide"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2
theme = ExtResource("2_l35kj")
text = "*the radio crackles*"
fit_content = true
visible_characters_behavior = 1

[node name="Slide2" type="CenterContainer" parent="Container/StorySlides"]
visible = false
layout_mode = 2

[node name="StoryText" type="RichTextLabel" parent="Container/StorySlides/Slide2"]
custom_minimum_size = Vector2(1024, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_l35kj")
text = "Approaching the beachfront!

The conditions are [WEATHER]... it won't deter us. Might as well be any old Sunday. Looking at [FACTION], we're prepared. We're expecting to face them [ENVIRONMENT]. Maybe [CIRCUMSTANCE]... let's try it."
fit_content = true
visible_characters_behavior = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
layout_direction = 2
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Container/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="SkipButton" type="Button" parent="Container/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Skip"

[node name="Spacer" type="Control" parent="Container/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NextButton" type="Button" parent="Container/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
text = "Next"

[node name="SFX" type="Node2D" parent="."]

[node name="Radio" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_cy58k")
volume_db = -4.0
bus = &"Environment"
playback_type = 1
